# mealcycle

./: .gitignore  Makefile  README.md  app.py  config.ini  pyproject.toml  setup.py  start-app.sh
.github/workflows/: main.yml
recipes/: beans paruppu usili.md  biriyani.md  brinjal ennegayi.md  chole.md  marinated tofu.md  palak paneer.md  paneer tikka.md
